--- a/example.ipynb
+++ b/example.ipynb
@@ -134,26 +134,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   no.         id                                         track_name  \\\n",
-       "0    1  281656475                                    PAC-MAN Premium   \n",
-       "1    2  281796108                          Evernote - stay organized   \n",
-       "2    3  281940292    WeatherBug - Local Weather, Radar, Maps, Alerts   \n",
-       "3    4  282614216  eBay: Best App to Buy, Sell, Save! Online Shop...   \n",
-       "4    5  282935706                                              Bible   \n",
+       "   no.         id  ...   prime_genre  sup_devices.num\n",
+       "0    1  281656475  ...         Games               38\n",
+       "1    2  281796108  ...  Productivity               37\n",
+       "2    3  281940292  ...       Weather               37\n",
+       "3    4  282614216  ...      Shopping               37\n",
+       "4    5  282935706  ...     Reference               37\n",
        "\n",
-       "   size_bytes currency  price  rating_count_tot  user_rating  user_rating_ver  \\\n",
-       "0   100788224      USD   3.99             21292          4.0              4.5   \n",
-       "1   158578688      USD   0.00            161065          4.0              3.5   \n",
-       "2   100524032      USD   0.00            188583          3.5              4.5   \n",
-       "3   128512000      USD   0.00            262241          4.0              4.5   \n",
-       "4    92774400      USD   0.00            985920          4.5              5.0   \n",
-       "\n",
-       "      ver cont_rating   prime_genre  sup_devices.num  \n",
-       "0   6.3.5          4+         Games               38  \n",
-       "1   8.2.2          4+  Productivity               37  \n",
-       "2   5.0.0          4+       Weather               37  \n",
-       "3  5.10.0         12+      Shopping               37  \n",
-       "4   7.5.1          4+     Reference               37  "
+       "[5 rows x 13 columns]"
       ]
      },
      "execution_count": 1,
@@ -516,12 +504,460 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# FILTER DATA"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>no.</th>\n",
+       "      <th>id</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>size_bytes</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>price</th>\n",
+       "      <th>rating_count_tot</th>\n",
+       "      <th>user_rating</th>\n",
+       "      <th>user_rating_ver</th>\n",
+       "      <th>ver</th>\n",
+       "      <th>cont_rating</th>\n",
+       "      <th>prime_genre</th>\n",
+       "      <th>sup_devices.num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5272</th>\n",
+       "      <td>7001</td>\n",
+       "      <td>1077644533</td>\n",
+       "      <td>State Council - Official Chinese government app</td>\n",
+       "      <td>60169216</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>25</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0.1</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>News</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5273</th>\n",
+       "      <td>7002</td>\n",
+       "      <td>1077644883</td>\n",
+       "      <td>iFleeing!</td>\n",
+       "      <td>435667968</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5274</th>\n",
+       "      <td>7005</td>\n",
+       "      <td>1077707350</td>\n",
+       "      <td>Chocolate Candy Party - Fudge Madness</td>\n",
+       "      <td>117302272</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>66</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5275</th>\n",
+       "      <td>7008</td>\n",
+       "      <td>1077791959</td>\n",
+       "      <td>iLive Pix - Spice Up Your Screen.</td>\n",
+       "      <td>2147328</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>117</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>9+</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5276</th>\n",
+       "      <td>7009</td>\n",
+       "      <td>1077809640</td>\n",
+       "      <td>ChatMate for WhatsApp</td>\n",
+       "      <td>26032128</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>148</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.1.0</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Social Networking</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       no.          id  ...        prime_genre  sup_devices.num\n",
+       "5272  7001  1077644533  ...               News               38\n",
+       "5273  7002  1077644883  ...              Games               37\n",
+       "5274  7005  1077707350  ...              Games               38\n",
+       "5275  7008  1077791959  ...          Lifestyle               37\n",
+       "5276  7009  1077809640  ...  Social Networking               24\n",
+       "\n",
+       "[5 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from FilterFunction import filter_data\n",
+    "\n",
+    "new = filter_data(data, 'no.', '>', 7000)\n",
+    "new.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>no.</th>\n",
+       "      <th>id</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>size_bytes</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>price</th>\n",
+       "      <th>rating_count_tot</th>\n",
+       "      <th>user_rating</th>\n",
+       "      <th>user_rating_ver</th>\n",
+       "      <th>ver</th>\n",
+       "      <th>cont_rating</th>\n",
+       "      <th>prime_genre</th>\n",
+       "      <th>sup_devices.num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>29</td>\n",
+       "      <td>286911400</td>\n",
+       "      <td>Hangman.</td>\n",
+       "      <td>4765696</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>42316</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.0.6</td>\n",
+       "      <td>9+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>41</td>\n",
+       "      <td>290807369</td>\n",
+       "      <td>Line Rider iRide™</td>\n",
+       "      <td>1646592</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>21609</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>9+</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>47</td>\n",
+       "      <td>292421271</td>\n",
+       "      <td>Fieldrunners</td>\n",
+       "      <td>66872320</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>41633</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.7.177604</td>\n",
+       "      <td>9+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>54</td>\n",
+       "      <td>293760823</td>\n",
+       "      <td>iFart - The Original Fart Sounds App</td>\n",
+       "      <td>60320768</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>21825</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0.8</td>\n",
+       "      <td>9+</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>89</td>\n",
+       "      <td>301387274</td>\n",
+       "      <td>Pocket God</td>\n",
+       "      <td>145293312</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>187529</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.48.2</td>\n",
+       "      <td>9+</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    no.         id  ...    prime_genre  sup_devices.num\n",
+       "26   29  286911400  ...          Games               38\n",
+       "36   41  290807369  ...  Entertainment               40\n",
+       "39   47  292421271  ...          Games               37\n",
+       "46   54  293760823  ...  Entertainment               37\n",
+       "78   89  301387274  ...  Entertainment               43\n",
+       "\n",
+       "[5 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new9sum = filter_data(data, 'cont_rating', '==', '9+')\n",
+    "new.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newprime = filter_data(data, 'prime_genre', '==', 'Games')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>no.</th>\n",
+       "      <th>id</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>size_bytes</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>price</th>\n",
+       "      <th>rating_count_tot</th>\n",
+       "      <th>user_rating</th>\n",
+       "      <th>user_rating_ver</th>\n",
+       "      <th>ver</th>\n",
+       "      <th>cont_rating</th>\n",
+       "      <th>prime_genre</th>\n",
+       "      <th>sup_devices.num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>281656475</td>\n",
+       "      <td>PAC-MAN Premium</td>\n",
+       "      <td>100788224</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>21292</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>6.3.5</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>283619399</td>\n",
+       "      <td>Shanghai Mahjong</td>\n",
+       "      <td>10485713</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>8253</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>284736660</td>\n",
+       "      <td>Ms. PAC-MAN</td>\n",
+       "      <td>70023168</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>7885</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0.4</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>284791396</td>\n",
+       "      <td>Solitaire by MobilityWare</td>\n",
+       "      <td>49618944</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>76720</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.10.1</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>284815117</td>\n",
+       "      <td>SCRABBLE Premium</td>\n",
+       "      <td>227547136</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>7.99</td>\n",
+       "      <td>105776</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.19.0</td>\n",
+       "      <td>4+</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    no.         id  ... prime_genre  sup_devices.num\n",
+       "0     1  281656475  ...       Games               38\n",
+       "5     6  283619399  ...       Games               47\n",
+       "9    10  284736660  ...       Games               38\n",
+       "10   11  284791396  ...       Games               38\n",
+       "11   12  284815117  ...       Games               37\n",
+       "\n",
+       "[5 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newprime.head()"
+   ]
   }
  ],
  "metadata": {
